--- a/client/src/css/6-components/base-components/_calendar-input.scss
+++ b/client/src/css/6-components/base-components/_calendar-input.scss
@@ -1,7 +1,7 @@
 .calendar-input__wrapper {
-	&> div {
+	&> .react-datepicker-wrapper {
 		display: inline-block;
-		vertical-align: top;
+		vertical-align: middle;
 		height: $formElementHeight;
 	}
 	&> input[type=text] {
