--- a/client/src/css/6-components/base-components/_pop-over.scss
+++ b/client/src/css/6-components/base-components/_pop-over.scss
@@ -8,6 +8,9 @@ $popover-arrow-color: $gray50;
 
 	&__anchor {
 		display: inline-block;
+		.full-width & {
+			width: $fullWidth;
+		}
 	}
 
 	&__popup {
