--- a/client/src/css/6-components/base-components/_text-input.scss
+++ b/client/src/css/6-components/base-components/_text-input.scss
@@ -12,6 +12,7 @@ input[type=password] {
 	padding: 0 10px;
 	font-family: $fixedWidthFont;
 	font-weight: $fixedWidthFontBaseWeight;
+	vertical-align: middle;
 
 	.error & {
 		border: $formErrorBorder;
