--- a/client/src/css/6-components/base-components/_form-error.scss
+++ b/client/src/css/6-components/base-components/_form-error.scss
@@ -23,4 +23,9 @@
 		border-width: 5px 8px 5px 0;
 		border-color: transparent $error transparent transparent;
 	}
+	&.no-arrow {
+		&:before {
+			content: none;
+		}
+	}
 }
