--- a/client/src/css/6-components/base-components/_select-input.scss
+++ b/client/src/css/6-components/base-components/_select-input.scss
@@ -1,116 +1,135 @@
 /*
 ############     _select-input.scss      ############
 */
-.Select {
+.react-select-wrapper {
 	display: inline-block;
 	vertical-align: middle;
 
 	@include formElementSizes;
-}
 
-.Select-control {
-	border: $formBorder;
-	background: $formBgColor;
-	height: $formElementHeight;
-	font-family: $fixedWidthFont;
-	font-weight: $fixedWidthFontBaseWeight;
-}
+	.react-select {
+		&__control {
+			border: $formBorder;
+			background: $formBgColor;
+			border-radius: $formBorderRadius;
+			min-height: $formElementHeight;
+			font-family: $fixedWidthFont;
+			font-weight: $fixedWidthFontBaseWeight;
 
-.Select-input {
-	height: $formElementHeight;
-	padding: 0;
-	&> input {
-		padding: 0;
-		line-height: $formElementHeight;
+			&--is-focused {
+				border-color: $focusColor;
+				box-shadow: 0 0 2px 2px rgba($focusColor, 0.5);
+			}
+		}
+		&__value-container {
+			padding: 0 8px;
+
+			&--is-multi.react-select__value-container--has-value {
+				padding: 0 8px 0 3px;
+			}
+		}
+		&__single-value {
+			position: relative;
+			transform: none;
+			flex: 2;
+			max-width: 95%;
+			white-space: normal;
+		}
+		&__multi-value__label {
+			white-space: normal;
+		}
+		&__placeholder {
+			top: unset;
+			margin: 0;
+			position: relative;
+			transform: none;
+		}
+		&__input {
+			input[type=text] {
+				height: auto;
+			}
+		}
+		&__indicator-separator {
+			display: none;
+		}
+		&__indicators {
+			background: $formColor;
+		}
+		&__indicator {
+			padding: 0 3px;
+
+			svg {
+				fill: white;
+			}
+		}
+		&__clear-indicator {
+			align-self: stretch;
+			align-items: center;
+			background: $gray40;
+
+			&:hover {
+				background-color: #FFBDAD;
+				svg {
+					fill: #DE350B;
+				}
+			}
+		}
 	}
-	.Select--multi & {
-		padding: 0;
-	}
-}
-
-.Select--single .Select-input {
-	&> input {
-		padding: 0 10px;
-	}
-}
-
-.Select-placeholder,
-.Select--single > .Select-control .Select-value {
-	line-height: $formElementHeight - 2px;
-	vertical-align: middle;
-	display: inline-block;
-}
-
-.Select.resizable {
-	min-width: $medium;
-}
-
-.Select.has-value.is-clearable.Select--single > .Select-control .Select-value {
-	padding-right: inherit;
-}
-
-.Select--multi .Select-value {
-	line-height: 1rem;
-	margin-top: 4px;
-	border: 1px solid $gray40;
-	background: $gray03;
-	color: $formColor;
-}
-
-.Select--multi .Select-value-icon {
-	padding: 1px 5px 1px;
-	border-right: 1px solid $gray30;
-}
-
-.Select-arrow-zone {
-	background: $formColor;
-}
-
-.Select-arrow {
-	content: ' ';
-	border-color: white;
-	border-style: solid;
-	border-width: 0 2px 2px 0;
-	right: 5px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) rotate(45deg);
-	width: 7px;
-	height: 7px;
-}
-
-.Select.is-open > .Select-control .Select-arrow {
-	top: inherit;
-	border-color: white;
-	border-width: 0 2px 2px 0;
-	transform: translate(-50%, -50%) rotate(-135deg);
 }
 
 /* Table Filter Specific */
 table.filters {
 	tr.filters {
-		.Select-control {
-			border: 0;
-			background: transparent;
-			border-radius: 0;
-		}
+		.react-select-wrapper {
+			width: 100%;
 
-		.Select-placeholder, .Select--single > .Select-control .Select-value {
-			line-height: $formElementHeight;
-			position: absolute;
-			color: $gray13;
-		}
+			&.react-select--single-select {
+				.react-select {
+					&__control {
+						flex-wrap: nowrap;
+					}
+					&__value-container {
+						flex-wrap: nowrap;
+						overflow: visible;
+					}
+				}
+			}
 
-		.Select-arrow-zone {
-			background: $gray13;
-			width: 15px;
-		}
+			.react-select {
+				&__control {
+					border: none;
+					border-radius: 0;
+					background: none;
+					min-width: 100px;
 
-		.Select-clear-zone {
-			background: $gray20;
-			color: white;
-			width: 15px;
+					&--is-focused {
+						border: none;
+						box-shadow: none;
+					}
+				}
+				&__placeholder {
+					color: $gray13;
+				}
+				&__multi-value {
+					&__label {
+						overflow: visible;
+					}
+				}
+				&__value-container {
+
+				}
+				&__indicators {
+					background: $gray13;
+				}
+				&__indicator {
+					padding: 0;
+
+					svg {
+						width: 15px;
+						height: 15px;
+					}
+				}
+			}
 		}
 	}
 }
